# MANPADS-System-Launcher-and-Rocket

./: .gitignore  manpad.md
docs/superpowers/plans/: 2026-04-26-medium-priority-enhancements-plan.md
docs/superpowers/specs/: 2026-04-26-launcher-state-machine-design.md
manpads-control/: .eslintrc.json  .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
manpads-control/.github/workflows/: build.yml
manpads-control/src-tauri/: Cargo.toml  tauri.conf.json
manpads-control/src-tauri/capabilities/: default.json
manpads-control/src-tauri/src/: lib.rs  main.rs
manpads-control/src-tauri/src/backend/: logging.rs  mod.rs  state.rs
manpads-control/src-tauri/src/backend/commands/: connectivity.rs  control.rs  mod.rs  telemetry.rs  validation.rs
manpads-control/src-tauri/src/backend/storage/: repository.rs
manpads-control/src-tauri/src/backend/udp/: connection.rs  mod.rs  parser.rs  socket.rs
manpads-control/src/app/: globals.css  layout.tsx  page.tsx
manpads-control/src/components/: ThemeProvider.tsx  ThemeToggle.tsx
manpads-control/src/components/analytics/: FlightAnalytics.tsx  FlightCharts.tsx
manpads-control/src/components/control/: ConnectionPanel.tsx  EmergencyStopButton.tsx  LaunchWizard.tsx  PidEditor.tsx
manpads-control/src/components/fleet/: FleetPanel.tsx
manpads-control/src/components/ui/: Card.tsx  (+3 more)
manpads-control/src/hooks/: useKeyboardShortcuts.ts
manpads-control/src/lib/: constants.ts  types.ts  utils.ts  validation.ts
manpads-control/src/store/: telemetry.ts
(+3 files in other folders)
